--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -75,7 +75,3 @@ body {
   }
  }
 }
-
-body {
- overscroll-behavior: contain;
-}
